k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: default

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend

        image: bilal22992/frontend:latest

        ports:
        - containerPort: 5000
